--- a/client/inventory.ini
+++ b/client/inventory.ini
@@ -1,9 +1,13 @@
 [elk_server]
-master
+siem
 
 [elk_client]
-jenkins-home
+;jenkins-home
+localhost
 
 
 [all:vars]
 ELASTICSEARCH_IP="{{ hostvars[groups['elk_server'][0]]['ansible_default_ipv4'].address }}"
+elasticsearch_username="elastic"
+elasticsearch_password="evd*W1rOiojc*0cAzNeF"
+mysql_host="localhost"
