--- a/client/elk/tasks/main.yml
+++ b/client/elk/tasks/main.yml
@@ -48,8 +48,8 @@
 
     - name: Configure Packetbeat, Metricbeat & Filebeat in SYSTEMD
       ansible.builtin.template:
-        src: "{{ item.0 }}.yml.j2"
-        dest: "/etc/systemd/system/{{ item.0 }}-{{ item.1 }}"
+        src: "{{ item.0 }}.service.j2"
+        dest: "/etc/systemd/system/{{ item.0 }}.service"
         owner: root
         group: root
         mode: '0644'
